--- a/6_Poisson_distribution/source/6_Poisson_distribution.tex
+++ b/6_Poisson_distribution/source/6_Poisson_distribution.tex
@@ -25,11 +25,11 @@
 Imagine someone fishing in a large lake; say the lake is so large that
 catching one fish doesn't effect the chance they'll catch
 another. Imagine too that the fishing conditions don't change
-day-by-day or hour-by-hour. We know how many fish they catch on
+day-by-day or hour-by-hour. Say we know how many fish they catch on
 average an hour, say five, but we want to estimate the probability
-that they catch eight. In other words we know the average rate they
+that they catch four. In other words we know the average rate they
 catch fish, but the actual event, the fish chancing upon the lure and
-getting hooked, is random, and we want to know the distribution of the
+getting hooked, is random, and we want to know the distribution of this
 event count over an interval. This distribution is an example of the
 Poisson distribution and is the subject of this section.\footnote{This
   joke, pretending the Poisson distribution is so named because it is
@@ -47,29 +47,33 @@ Poisson distribution and is the subject of this section.\footnote{This
 \subsection*{Deriving the Poisson distribution}
 
 The Poisson distribution can be derived from the bionomial
-distribution, it just requires a slightly nerve-wracking
-limit. Imagine slicing time up into small slices, each so small there
-is a vanishingly small chance of two events happening and that the
-change of one event is $p$. Thus, $P(\mbox{one fish})=p$, $P(\mbox{no
-  fishes})=1-p$ and $P(\mbox{more than one fishes})=0$. Of course this
-is nonsense, if there can be one fish there is some change of two, but
-we are going to take the limit where the time interval becomes zero
-and so this doesn't matter. Call the small interval width $\delta t$.
+distribution, it just requires a nerve-wracking limit. Imagine slicing
+time up into small slices, each so small there is a vanishingly small
+chance of two events happening and that the change of one event is
+$p$. Thus, $P(\mbox{one fish})=p$, $P(\mbox{no fishes})=1-p$ and
+$P(\mbox{more than one fishes})=0$. Of course this is nonsense, if
+there can be one fish there is some change of two, but we are going to
+take the limit where the time interval becomes zero so this doesn't
+matter. Call the small interval width $\delta t$.
 
-Now if we are interested in the probability distribution for the number of events in an interval $T=n\delta t$, then, by the binomial distribution the probability of $r$ events is
+Now if we are interested in the probability distribution for the
+number of events in an interval $T=n\delta t$, then, by the binomial
+distribution the probability of $r$ events is
 \begin{equation}
 p(r)=\left(\begin{array}{c}n\\r\end{array}\right)p^r(1-p)^{n-r}
 \end{equation}
-Now write $\delta t=T/n$ and consider the $n\rightarrow \infty$ limit;
-this gives the Poisson distribution. 
+Now write $\delta t=T/n$ and consider the $n\rightarrow \infty$ limit:
 \begin{equation}
 p(r)=\lim_{n\rightarrow\infty}\left(\begin{array}{c}n\\r\end{array}\right)p^r(1-p)^{n-r}
 \end{equation}
-Now since $p$ is the probability of an event in the small interval, it will become tiny as $n$ becomes large, so, to deal with quantities that remain useful in the limit, let $\lambda=np$. Subsituting this in, and expanding out the binomial coefficient:
+Since $p$ is the probability of an event in the small interval, it
+will become tiny as $n$ becomes large, so, to deal with quantities
+that remain useful in the limit, let $\lambda=np$. Subsituting this
+in, and expanding out the binomial coefficient:
 \begin{equation}
 p(r)=\lim_{n\rightarrow\infty}\frac{n(n-1)(n-2)\ldots (n-r+1)}{r!}\left(\frac{\lambda}{n}\right)^r\left(1-\frac{\lambda}{n}\right)^{n-r}
 \end{equation}
-Now as $n$ gets large the numerator of the first fraction just looks like $n^r$ and cancels with the denominator of the second fraction. Recall that
+As $n$ gets large the numerator of the first fraction just looks like $n^r$ and cancels with the denominator of the second fraction. Recall that
 \begin{equation}
 \lim_{n\rightarrow \infty}\left(1-\frac{x}{n}\right)^n=e^x
 \end{equation}
@@ -83,16 +87,16 @@ p(r)=\frac{\lambda^r}{r!}e^{-\lambda}
 \end{equation}
 
 First, it is easy to check that the probabilities add to one; but
-notice that this range of the random variable is infinite!
-Now, using the Taylor expansion of the exponential:
+notice that this range of the random variable is infinite!  Using the
+Taylor expansion of the exponential:
 \begin{equation}
 e^x=\sum_{r=0}^\infty \frac{x^r}{r!}
 \end{equation}
-so
+we have
 \begin{equation}
 \sum_{r=0}^\infty \frac{\lambda^r}{r!}e^{-\lambda}=e^{-\lambda}\sum_{r=0}^\infty \frac{\lambda^r}{r!}=e^{-\lambda}e^{\lambda}=1
 \end{equation}
-Now, consider the mean
+Next consider the mean
 \begin{equation}
 \mu = \sum_{r=0}^\infty r\frac{\lambda^r}{r!}e^{-\lambda}
 \end{equation}
@@ -116,12 +120,18 @@ so $\lambda$ is the average event count!
 
 \subsection*{Quick example}
 
-An average of two supervillians arrive at Gotham every day; Batman has little trouble fighting them off, in fact he can fight off six supervillians a day. Seven would be tricky though. What is the chance seven supervillians arrive in one day?
+An average of two supervillians arrive at Gotham every day; Batman has
+little trouble fighting them off, in fact he can fight off six
+supervillians a day. Seven would be tricky though. What is the chance
+seven supervillians arrive in one day?
 \begin{equation}
 p(7)=\frac{2^7}{7!}e^{-2}\approx 0.0034
 \end{equation}
 so makes it seem Batman will probably be ok, however, you should note
-there are 365 days in the year.
+there are 365 days in the year. As for the fishing example:
+\begin{equation}
+p(4)=\frac{5^4}{4!}e^{-5}\approx 0.19
+\end{equation}
 
 \end{document}
 
