--- a/problem_sheets/ps1/source/ps1.tex
+++ b/problem_sheets/ps1/source/ps1.tex
@@ -108,8 +108,6 @@ Four questions, each worth two marks with two marks for attendance.
 
 \begin{enumerate}
 
-
-
 \item In the poker hand \textsl{two pair} there are two pairs of cards
   with each card in the pair matched by value; the fifth card has a
   different value to either pair. What is the probability of two pairs
@@ -129,6 +127,36 @@ Four questions, each worth two marks with two marks for attendance.
 
 \item A three-sided dice is rolled three times. $X$ is the sum of the
   largest two values. Write down the probability distribution for $X$.
+
+\end{enumerate}
+
+\subsection*{Extra questions}
+
+These are for you to do on your own, not for handing up. Solutions will be included in the solutions section.
+
+\begin{enumerate}
+
+\item When it started in 1987 the Irish lottery has 36 numbers;
+  participants paid 50 Irish pence to buy a combination of six
+  different numbers; they would win if these numbers matched the six
+  drawn. In the last week in May in 1992 a syndicate tried to buy all
+  combinations of numbers. If they had succeeded how many numbers
+  would they have bought? In the event the lottery shut down lots of
+  the lottery machines so they only bought most of the numbers, they
+  nonetheless had the winning number but shared the prize three
+  ways. However, because of the roll-over prize and the match-5 and
+  match-4 prizes, they are thought to have made a substantial
+  profit. The lottery was redesigned after this to have more numbers.
+
+
+\item From a group of three undergraduates and five graduate students,
+  rour students are randomly selected to act as TAs. What is the
+  chance there will be exactly two undergraduate TAs?
+
+\item Prove
+\begin{equation}
+\left(\begin{array}{c}n\\r\end{array}\right)=\left(\begin{array}{c}n\\n-r\end{array}\right)
+\end{equation}
 
 \end{enumerate}
 
