--- a/problem_sheets/ps1/source/ps1.solns.tex
+++ b/problem_sheets/ps1/source/ps1.solns.tex
@@ -138,6 +138,24 @@ three and the number of ways of picking two graduates out of five is
 \end{equation}
 which stays the same if you swap $r$ and $n-r$.
 
+\item Two events $A$ and $B$ have probabilities $P(A)=0.2$, $P(B)=0.3$ and $P(A\cup B)=0.4$. Find
+\begin{enumerate}
+\item Find $P(A\cap B)$.
+\item Find $P(\bar{A}\cap \bar{B})$.
+\item Find $P(A|B)$.
+\end{enumerate}
+\textbf{Solution}: So
+\begin{equation}
+P(A\cup B)=P(A)+P(B)-P(A\cap B)
+\end{equation}
+so 
+\begin{equation}
+P(A\cap B)=0.2+0.3-0.4=0.1
+\end{equation}
+If $P(A\cap B)=0.1$ then $P(\bar{A}\cap B)=P(B)-P(A\cap B)=0.2$. Finally
+\begin{equation}
+P(A|B)=\frac{P(A\cap B)}{P(B)}=\frac{0.1}{0.3}=\frac{1}{3}
+\end{equation}
 \end{enumerate}
 
 \end{document}
