--- a/problem_sheets/ps1/source/ps1.tex
+++ b/problem_sheets/ps1/source/ps1.tex
@@ -158,6 +158,14 @@ These are for you to do on your own, not for handing up. Solutions will be inclu
 \left(\begin{array}{c}n\\r\end{array}\right)=\left(\begin{array}{c}n\\n-r\end{array}\right)
 \end{equation}
 
+\item Two events $A$ and $B$ have probabilities $P(A)=0.2$, $P(B)=0.3$ and $P(A\cup B)=0.4$. Find
+\begin{enumerate}
+\item Find $P(A\cap B)$.
+\item Find $P(\bar{A}\cap \bar{B})$.
+\item Find $P(A|B)$.
+\end{enumerate}
+
+
 \end{enumerate}
 
 \end{document}
