--- a/problem_sheets/ps1/source/ps1.tex
+++ b/problem_sheets/ps1/source/ps1.tex
@@ -165,6 +165,17 @@ These are for you to do on your own, not for handing up. Solutions will be inclu
 \item Find $P(A|B)$.
 \end{enumerate}
 
+\item One night in a bar in Las Vegas you meet a dodgy character who
+  tells you that there are two types of slot machine in the Topicana,
+  one that pays out 10\% of the time, the other 20\%. One sort of
+  machine is blue, the other red. Unfortunately the dodgy character is
+  too drunk to remember which is which. The next day you randomly
+  select red to try, you find a red machine and put in a coin. You
+  lose. Assuming the dodgy character was telling the truth, what is
+  the chance the red machine is the one that pays out more. If you had
+  won instead of losing, what would the chance be?\footnote{I stole
+    this problem from \texttt{courses.smp.uq.edu.au/MATH3104/}}
+
 
 \end{enumerate}
 
