--- a/problem_sheets/ps1/source/ps1.solns.tex
+++ b/problem_sheets/ps1/source/ps1.solns.tex
@@ -156,6 +156,39 @@ If $P(A\cap B)=0.1$ then $P(\bar{A}\cap B)=P(B)-P(A\cap B)=0.2$. Finally
 \begin{equation}
 P(A|B)=\frac{P(A\cap B)}{P(B)}=\frac{0.1}{0.3}=\frac{1}{3}
 \end{equation}
+
+
+
+\item One night in a bar in Las Vegas you meet a dodgy character who
+  tells you that there are two types of slot machine in the Topicana,
+  one that pays out 10\% of the time, the other 20\%. One sort of
+  machine is blue, the other red. Unfortunately the dodgy character is
+  too drunk to remember which is which. The next day you randomly
+  select a red machine and put in a coin. You lose. Assuming the dodgy
+  character was telling the truth, what is the chance the red machine
+  is the one that pays out more. If you had won instead of losing,
+  what would the chance be?\footnote{I stole this problem from
+    \texttt{courses.smp.uq.edu.au/MATH3104/}}\\ \\ \\ \textbf{Solution}:
+  So let $J$ be the event of winning and $R$ be the event that the red
+  machine is the one that pays out more. We want
+\begin{equation}
+P(R|!J)=\frac{P(!J|R)P(R)}{P(!J)}
+\end{equation}
+where we are writing $!J$, not $J$, for $\bar{J}$. Now $P(!J|R)=0.8$
+according to the DC and $P(R)=0.5$ because we chose between red and
+blue randomly. Finally
+\begin{equation}
+P(!J)=P(!J|R)P(R)+P(!J|B)P(B)=0.8\times 0.5 + 0.9\times 0.5=0.85
+\end{equation}
+and hence
+\begin{equation}
+P(R|\bar{J})=\frac{0.8\times 0.5}{0.85}\approx0.47
+\end{equation}
+so, consider the prior $P(R)=0.5$ we haven't learned much from this lost coin. If we had won you'd have
+\begin{equation}
+P(R|J)=\frac{P(J|R)P(R)}{P(J)}=\frac{0.2\times 0.5}{0.15}\approx 0.67
+\end{equation}
+so you'd learn a lot more from a win, this makes sense since it is a rarer event.
 \end{enumerate}
 
 \end{document}
