--- a/problem_sheets/ps1/source/ps1.solns.tex
+++ b/problem_sheets/ps1/source/ps1.solns.tex
@@ -20,7 +20,7 @@
 \lhead{COMS10007 ps1.solns - Conor}
 \begin{document}
 
-\section*{Problem Sheet 1 - outline solutiosn}
+\section*{Problem Sheet 1 - outline solutions}
 
 \begin{enumerate}
 
