--- a/9_Gauss_distribution/source/9_Gauss_distribution.tex
+++ b/9_Gauss_distribution/source/9_Gauss_distribution.tex
@@ -226,7 +226,7 @@ we have
 
 \subsection*{Example}
 
-The loudness of songs at a concert are normally distributed with mean 75 dB and standard deviation $\sigma=10 dB$. What is the probability that a long has loudness between 80 and 90 dB? Well
+The loudness of songs at a concert are normally distributed with mean 75 dB and standard deviation $\sigma=10 dB$. What is the probability that the next song has loudness between 80 and 90 dB? Well
 \begin{equation}
 \mbox{Prob}(80<x<90)=\frac{1}{2}[\mbox{erf}\,(z_2)-\mbox{erf}\,(z_1)]
 \end{equation}
