--- a/9_Gauss_distribution/source/fig_prob.tex
+++ b/9_Gauss_distribution/source/fig_prob.tex
@@ -77,8 +77,8 @@
       \csname LTb\endcsname%
       \put(462,439){\makebox(0,0)[r]{\strut{} 0}}%
       \put(2619,220){\makebox(0,0){\strut{} $\mu$}}%
-      \put(2872,220){\makebox(0,0){\strut{} $z_1$}}%
-      \put(3479,220){\makebox(0,0){\strut{} $z_2$}}%
+      \put(2872,220){\makebox(0,0){\strut{} $x_1$}}%
+      \put(3479,220){\makebox(0,0){\strut{} $x_2$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
     }%
