--- a/10_central_limit_theorem/source/10_central_limit_theorem.tex
+++ b/10_central_limit_theorem/source/10_central_limit_theorem.tex
@@ -57,11 +57,11 @@ p_Z(z)=\int_0^z dx=z
 \end{equation}
 and for $z\in (1,2]$
 \begin{equation}
-p_Z(z)=\int_{1-z}^1dx=1-(z-1)=2-z
+p_Z(z)=\int_{1-z}^1dx=1-(1-z)=-z
 \end{equation}
 Putting it all together we get
 \begin{equation}
-p_Z(z)=\left\{\begin{array}{ll} z&z\in [0,1]\\2-z& z\in [1,2]\\0&\mbox{otherwise}\end{array}\right.
+p_Z(z)=\left\{\begin{array}{ll} z&z\in [0,1]\\-z& z\in [1,2]\\0&\mbox{otherwise}\end{array}\right.
 \end{equation}
 
 \subsection*{Sums and the moment generating function}
